# xturtle-slide

./: README.md  xturtle-slide.cabal
app/: some-slide.hs
src/: Lib.hs
src/Graphics/X11/: Slide.hs
src/Graphics/X11/Slide/: Options.hs
