name:                xturtle-slide
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/YoshikuniJujo/xturtle-slide#readme
license:             BSD3
license-file:        LICENSE
author:              Yoshikuni Jujo
maintainer:          yoshikuni.jujo[AT]snow.plala.or.jp
copyright:           (c) 2017 Yoshikuni Jujo
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.X11.Slide
  other-modules:       Graphics.X11.Slide.Options
  ghc-options:         -Wall -fno-warn-tabs
  build-depends:       base >= 4.7 && < 5, xturtle
  default-language:    Haskell2010

executable some-slide
  hs-source-dirs:      app
  main-is:             some-slide.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, xturtle-slide
  default-language:    Haskell2010

test-suite xturtle-slide-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , xturtle-slide
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/YoshikuniJujo/xturtle-slide
